Add "Redo" function and change implementations of History